yaml/istio/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker
  labels:
    app: broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker
  strategy: {}
  template:
    metadata:
      labels:
        app: broker
    spec:
      containers:
      - image: ciberkleid/s1p-2020-mesh-rs-broker:0.0.1-SNAPSHOT
        name: broker
        resources: {}
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping
  labels:
    app: ping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping
  strategy: {}
  template:
    metadata:
      labels:
        app: ping
    spec:
      containers:
      - image: ciberkleid/s1p-2020-mesh-rs-ping:0.0.1-SNAPSHOT
        name: ping
        resources: {}
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong
  labels:
    app: pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pong
  strategy: {}
  template:
    metadata:
      labels:
        app: pong
    spec:
      containers:
      - image: ciberkleid/s1p-2020-mesh-rs-pong:0.0.1-SNAPSHOT
        name: pong
        resources: {}
        imagePullPolicy: Always
