yaml/istio/broker-vs.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: broker
spec:
  hosts:
  - "rsocket-broker.springone.coraiberkleid.xyz"
  gateways:
  - broker
  tcp:
  - match:
    - port: 8002
    route:
    - destination:
        port:
          number: 8002
        host: broker
